# docs/swagger.yaml
@@ -227,64 +227,6 @@ paths:
       summary: Register a user
       tags:
       - auth
-  /feed:
-    get:
-      consumes:
-      - application/json
-      description: Fetches the user feed
-      parameters:
-      - description: Since
-        in: query
-        name: since
-        type: string
-      - description: Until
-        in: query
-        name: until
-        type: string
-      - description: Limit
-        in: query
-        name: limit
-        type: integer
-      - description: Offset
-        in: query
-        name: offset
-        type: integer
-      - description: Sort
-        in: query
-        name: sort
-        type: string
-      - description: Tags
-        in: query
-        name: tags
-        type: string
-      - description: Search
-        in: query
-        name: search
-        type: string
-      - description: User ID
-        in: query
-        name: userID
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/store.PostWithMetadata'
-            type: array
-        "400":
-          description: Bad Request
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Fetches the user feed
-      tags:
-      - feed
   /health:
     get:
       description: Healthcheck endpoint
@@ -519,6 +461,64 @@ paths:
       summary: Activate a user
       tags:
       - users
+  /users/feed:
+    get:
+      consumes:
+      - application/json
+      description: Fetches the user feed
+      parameters:
+      - description: Since
+        in: query
+        name: since
+        type: string
+      - description: Until
+        in: query
+        name: until
+        type: string
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      - description: Sort
+        in: query
+        name: sort
+        type: string
+      - description: Tags
+        in: query
+        name: tags
+        type: string
+      - description: Search
+        in: query
+        name: search
+        type: string
+      - description: User ID
+        in: query
+        name: userID
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.PostWithMetadata'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Fetches the user feed
+      tags:
+      - feed
 securityDefinitions:
   ApiKeyAuth:
     description: JWT Authorization header
